# opengl-real-time-rendering

./: LICENSE  README.md  shell.nix
01-CookTorrance-Phong-NPR/: .clang-format  .clangd  .gitignore  CMakeLists.txt
01-CookTorrance-Phong-NPR/shaders/: fragment.glsl  vertex.glsl
01-CookTorrance-Phong-NPR/src/: ObjModel.cpp  ObjModel.h  Shader.cpp  Shader.h  main.cpp
assets/models/: teapot-copyright.txt
